# redeem

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  utils.py
.github/: dependabot.yml
.github/workflows/: redeem.yml
used/: genshin.txt  starrail.txt
