[project]
name = "redeem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-webhook>=1.4.1",
    "genshin>=1.7.26",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
]
